--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,15 +9,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <div style="margin-top: 25%;"class="container">
+    <div style="margin-top: 10%;"class="container">
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <h1>Today is <%=Day%></h1>
-                <p><%=Date%></p>
+                <h1 class="message"">Today is <%=Day%></h1>
+                <p class="message"><%=Date%></p>
 
             </div>
             <div class="col-sm-12 col-md-4">
@@ -40,6 +41,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
+    <script src="sketch.js"></script>
 </body>
 
 </html>
