--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@
 
 
 .container{
-    padding:5px;
+    padding-top:5px;
     border: 1px solid black;
 }
 
@@ -25,8 +25,13 @@
 }
 
 .dark-border{
-    border: 1px solid black;
-}
-.dark-border{
     border: 1px solid white;
+}
+
+.middle-container{
+    margin-top: 50px;;
+}
+
+.hovering:hover{
+    border:1px solid grey;
 }
