--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,20 +14,69 @@
 
 <body>
 
-    <div style="margin-top: 10%;"class="container">
+    <div style="margin-top: 10%;" class="container">
         <div class="row">
             <div class="col-sm-12 col-md-4">
                 <h1 class="message"">Today is <%=Day%></h1>
-                <p class="message"><%=Date%></p>
+                <p class=" message"><%=Date%></p>
 
             </div>
             <div class="col-sm-12 col-md-4">
-                <img style="width:100%;height:250px" src="https://clickup.com/blog/wp-content/uploads/2019/01/to-do-list-apps.png" alt="todo list img">
+                <img style="width:100%;height:250px"
+                    src="https://clickup.com/blog/wp-content/uploads/2019/01/to-do-list-apps.png" alt="todo list img">
             </div>
             <div class="col-sm-12 col-md-4">
-                <img style="width:100%;height:250px" src="https://desktime.com/blog/wp-content/uploads/2021/03/feature.png" alt="to do list img">
+                <img style="width:100%;height:250px"
+                    src="https://desktime.com/blog/wp-content/uploads/2021/03/feature.png" alt="to do list img">
             </div>
         </div>
+    </div>
+
+    <div class="middle-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img style="height:200px" class="card-img-top"
+                            src="https://woc.aises.org/sites/default/files/styles/image730x495/public/March2020-Student-Illo-BLOGPOST-FNL.jpg?itok=sfPCAQLh"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img style="height:200px" class="card-img-top"
+                            src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="card" style="width: 18rem;">
+                        <img style="height:200px" class="card-img-top"
+                            src="https://i.ytimg.com/vi/GMa1xbjdtHk/maxresdefault.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
 
