--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <script src="https://kit.fontawesome.com/46108d76cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1 class="welcome">Welcome <%=Fname%></h1>
 
     <div style="margin-top: 10%;" class="container">
         <div class="row">
@@ -50,14 +53,14 @@
                 </div>
                 <div class="col-sm">
                     <div class="card" style="width: 18rem;">
-                        <img style="height:200px" class="card-img-top"
+                        <img style="height:200px" class="card-img-top "
                             src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
-                            <button type="button" class="btn btn-success">Success</button>
+                            <button type="button" class="btn btn-success gym">Success</button>
                         </div>
                     </div>
                 </div>
@@ -76,6 +79,20 @@
 
             </div>
         </div>
+
+    </div>
+
+
+    <div class="Bottom-Container">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+
+
+
+
+
+
+
 
     </div>
 
