media queries used to add image responsiveness

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <h1 class="welcome">Welcome <%=Fname%></h1>
+    <h1 class="welcome">Welcome <em><%=Fname%></h1></em> 
+    
 
     <div style="margin-top: 10%;" class="container">
         <div class="row">
@@ -38,8 +39,8 @@
     <div class="middle-container">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-sm-12 col-md-4">
+                    <div style="width: 100%; " class="card" style="width: 18rem;">
                         <img style="height:200px" class="card-img-top"
                             src="https://woc.aises.org/sites/default/files/styles/image730x495/public/March2020-Student-Illo-BLOGPOST-FNL.jpg?itok=sfPCAQLh"
                             alt="Card image cap">
@@ -51,8 +52,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-sm-12 col-md-4">
+                    <div style="width: 100%; " class="card" style="width: 18rem;">
                         <img style="height:200px" class="card-img-top "
                             src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
                             alt="Card image cap">
@@ -64,8 +65,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
-                    <div class="card" style="width: 18rem;">
+                <div class="col-sm-12 col-md-4">
+                    <div style="width: 100%; " class="card" style="width: 18rem;">
                         <img style="height:200px" class="card-img-top"
                             src="https://i.ytimg.com/vi/GMa1xbjdtHk/maxresdefault.jpg" alt="Card image cap">
                         <div class="card-body">
