--- a/public/style.css
+++ b/public/style.css
@@ -1,58 +1,100 @@
-.dark-text{
+.dark-text {
     color: white;
 }
-.light-text{
+
+.light-text {
     color: black;
 }
-.welcome{
-    padding-top:50px; ;
+
+.welcome {
+    padding-top: 50px;
+    ;
     text-align: center;
 }
 
 
-.container{
-    padding-top:5px;
+.container {
+    padding-top: 5px;
     border: 1px solid black;
 }
 
 
-.dark{
+
+.dark {
     background-color: black;
     color: white;
 }
-.dull{
+
+.dull {
     background-color: cadetblue;
 }
-.bright{
+
+.bright {
     background-color: #A9FC04;
 }
 
-.dark-border{
+.dark-border {
     border: 1px solid white;
 }
 
-.middle-container{
-    margin-top: 50px;;
+.middle-container {
+    margin-top: 50px;
+    ;
+    text-align: center;
 }
 
-.hovering:hover{
-    border:1px solid grey;
+.hovering:hover {
+    border: 5px solid grey;
 }
 
-.whitebg{
-    background-color: white;;
+.whitebg {
+    background-color: white;
+    ;
 }
-.greybg{
+
+.greybg {
     background-color: grey;
 }
-.darkbg{
+
+.darkbg {
     background-color: black;
 }
 
 
 
-.Bottom-Container{
 
-    margin-top: 50px;;
+.Bottom-Container {
+
+    margin-top: 50px;
+    ;
     text-align: center;
+}
+
+.HomeButton {
+    margin-top: 15px;
+    ;
+}
+
+@media (max-width:750px) {
+    body {
+        text-align: center;
+    }
+
+    button {
+        margin-bottom: 25px;
+        ;
+    }
+
+    input {
+        margin-top: 10px;
+    }
+
+    .middle-container img {
+        padding-top: 15px;
+        ;
+        text-align: center;
+        margin-left: 25%;
+        width: 50%;
+    }
+
 }
