ROutes been altered

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,14 +9,47 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+
     <script src="https://kit.fontawesome.com/46108d76cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="welcome">Welcome <em><%=Fname%></h1></em> 
-    
+    <h1 class="welcome">Welcome <em><%=Fname%></h1></em>
+
+
+    <ol>
+        <li>Eat The food</li>
+        <li>Buy Food</li>
+        <li>Buy Milk</li>
+        <li><%=newListItem%></li>
+    </ol>
+
+    <form action="/addItem" method="post">
+        <input type="text" name="newItem" id="" placeholder="Enter more activities">
+        <button type="submit" name="button">Add</button>
+    </form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div style="margin-top: 10%;" class="container">
         <div class="row">
