--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,29 +9,53 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
+
     <script src="https://kit.fontawesome.com/46108d76cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1 class="welcome">Welcome <em><%=Fname%></h1></em> 
-    
+    <h1 class="welcome">Welcome <em><%=Fname%></h1></em>
 
-    <div style="margin-top: 10%;" class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-4">
-                <h1 class="message"">Today is <%=Day%></h1>
-                <p class=" message"><%=Date%></p>
 
-            </div>
-            <div class="col-sm-12 col-md-4">
-                <img style="width:100%;height:250px"
-                    src="https://clickup.com/blog/wp-content/uploads/2019/01/to-do-list-apps.png" alt="todo list img">
-            </div>
-            <div class="col-sm-12 col-md-4">
-                <img style="width:100%;height:250px"
-                    src="https://desktime.com/blog/wp-content/uploads/2021/03/feature.png" alt="to do list img">
+
+
+    <div class="top-container">
+
+        <div style="margin-top: 10%;" class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-4">
+                    <h1 class="message"">Today is <%=Day%></h1>
+        <p class=" message"><%=Date%></p>
+
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item ">
+
+                                <img style="width:100%;height:250px"
+                                    src="https://clickup.com/blog/wp-content/uploads/2019/01/to-do-list-apps.png"
+                                    alt="todo list img">
+                            </div>
+                            <div class="carousel-item ">
+                                <img  style="width:100%;height:250px" class="card-img-top "
+                                    src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
+                                    alt="Card image cap">
+                            </div>
+                            <div style="text-align:center ;" class="carousel-item active">
+                                <h3>Lets Get To Work</h3>
+                                <p>"To-do lists offer a way to increase productivity, stopping you from forgetting things, helps prioritise tasks, manage tasks effectively, use time wisely and improve time management as well as workflow."</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <img style="width:100%;height:250px"
+                        src="https://desktime.com/blog/wp-content/uploads/2021/03/feature.png" alt="to do list img">
+                </div>
             </div>
         </div>
     </div>
@@ -46,34 +70,60 @@
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk
                                 of the card's content.</p>
                             <button type="button" class="btn btn-success">Success</button>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="col-sm-12 col-md-4">
                     <div style="width: 100%; " class="card" style="width: 18rem;">
                         <img style="height:200px" class="card-img-top "
                             src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
                             alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <button type="button" class="btn btn-success gym">Success</button>
+                        <div style="height:190px ;" class="card-body">
+                            <form action="/" method="post">
+                                <input type="text" name="workoutItem">
+                                <button type="submit" class="btn btn-success ButtonAdded">Add</button>
+                            </form>
                         </div>
                     </div>
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
                 <div class="col-sm-12 col-md-4">
                     <div style="width: 100%; " class="card" style="width: 18rem;">
                         <img style="height:200px" class="card-img-top"
                             src="https://i.ytimg.com/vi/GMa1xbjdtHk/maxresdefault.jpg" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <button type="button" class="btn btn-success">Success</button>
+                        <div style="height:190px;" class="card-body">
+                            <form action="/" method="post">
+                                <input type="text" name="newItem">
+                                <button type="submit" class="btn btn-success ButtonAdded">Add</button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -84,9 +134,64 @@
     </div>
 
 
-    <div class="Bottom-Container">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
+
+    <div class="middle-container">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-4">
+                    <div style="width: 100%; " class="card" style="width: 18rem;">
+                        <img style="height:200px" class="card-img-top"
+                            src="https://woc.aises.org/sites/default/files/styles/image730x495/public/March2020-Student-Illo-BLOGPOST-FNL.jpg?itok=sfPCAQLh"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk
+                                of the card's content.</p>
+                            <button type="button" class="btn btn-success">Success</button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+                <div class="col-sm-12 col-md-4">
+                    <h3>Work Out</h3>
+
+                    <%for(var j=0;j<workout.length;j++){%>
+                    <p style="text-decoration: underline;"><%=workout[j]%></p>
+
+                    <%}%>
+            
+
+        
+                    
+                </div>
+
+
+
+
+
+                <div class="col-sm-12 col-md-4">
+                    <h3>Food List</h3>
+                        <%for(var i=0;i<newItems.length;i++){%>
+                    <p style="text-decoration: underline;"> <%=newItems[i]%></p>
+                    <%}%>
+
+           
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="Bottom-Container">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-instagram"></i>
 
 
 
@@ -95,20 +200,20 @@
 
 
 
-    </div>
+        </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script src="sketch.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+        <script src="sketch.js"></script>
 </body>
 
 </html>
