Can now delete items and add items to sepearte to do lists

--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@
     border: 1px solid white;
 }
 
-.middle-container {
+.middle-container,.bottom-container {
     margin-top: 50px;
     ;
     text-align: center;
@@ -53,7 +53,7 @@
 }
 
 .greybg {
-    background-color: grey;
+    background-color:white;
 }
 
 .darkbg {
