--- a/views/list.ejs
+++ b/views/list.ejs
@@ -39,13 +39,15 @@
                                     alt="todo list img">
                             </div>
                             <div class="carousel-item ">
-                                <img  style="width:100%;height:250px" class="card-img-top "
+                                <img style="width:100%;height:250px" class="card-img-top "
                                     src="https://i.pinimg.com/originals/a2/c2/1c/a2c21cddcdffd7eb6c8259c06636299e.gif"
                                     alt="Card image cap">
                             </div>
                             <div style="text-align:center ;" class="carousel-item active">
                                 <h3>Lets Get To Work</h3>
-                                <p>"To-do lists offer a way to increase productivity, stopping you from forgetting things, helps prioritise tasks, manage tasks effectively, use time wisely and improve time management as well as workflow."</p>
+                                <p>"To-do lists offer a way to increase productivity, stopping you from forgetting
+                                    things, helps prioritise tasks, manage tasks effectively, use time wisely and
+                                    improve time management as well as workflow."</p>
                             </div>
                         </div>
                     </div>
@@ -60,6 +62,18 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="middle-container">
         <div class="container">
             <div class="row">
@@ -77,15 +91,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -96,8 +101,13 @@
                             alt="Card image cap">
                         <div style="height:190px ;" class="card-body">
                             <form action="/" method="post">
-                                <input type="text" name="workoutItem">
+                                <input placeholder="Add New Workout" type="text" name="workoutItem">
                                 <button type="submit" class="btn btn-success ButtonAdded">Add</button>
+                            </form>
+
+                            <form style="padding-top:15px;padding-left:17px;" action="/" method="post">
+                                <input placeholder="Delete Workout" type="text" name="deleteWorkout">
+                                <button  type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
                     </div>
@@ -105,15 +115,26 @@
 
 
 
+                <div class="col-sm-12 col-md-4">
+                    <div style="width: 100%; " class="card" style="width: 18rem;">
+                        <img style="height:200px" class="card-img-top "
+                            src="https://i.ytimg.com/vi/GMa1xbjdtHk/maxresdefault.jpg"
+                            alt="Card image cap">
+                        <div style="height:190px ;" class="card-body">
+                            <form action="/" method="post">
+                                <input placeholder="Add New Workout" type="text" name="newItem">
+                                <button type="submit" class="btn btn-success ButtonAdded">Add</button>
+                            </form>
 
+                            <form style="padding-top:15px;padding-left:17px;" action="/" method="post">
+                                <input placeholder="Delete Workout" type="text" name="deleteItem">
+                                <button  type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
 
-
-
-
-
-
-
-
+<!-- 
 
                 <div class="col-sm-12 col-md-4">
                     <div style="width: 100%; " class="card" style="width: 18rem;">
@@ -124,9 +145,14 @@
                                 <input type="text" name="newItem">
                                 <button type="submit" class="btn btn-success ButtonAdded">Add</button>
                             </form>
+
+                            <form action="/" method="post">
+                                <input type="text" name="deleteItem">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -135,7 +161,7 @@
 
 
 
-    <div class="middle-container">
+    <div class="bottom-container">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-4">
@@ -157,24 +183,18 @@
 
 
 
-                <div class="col-sm-12 col-md-4">
+                <div style="background-color: #6a2d50;" class="col-sm-12 col-md-4">
                     <h3>Work Out</h3>
 
                     <%for(var j=0;j<workout.length;j++){%>
                     <p style="text-decoration: underline;"><%=workout[j]%></p>
 
                     <%}%>
-            
-
-        
                     
                 </div>
 
 
-
-
-
-                <div class="col-sm-12 col-md-4">
+                <div style="background-color:#0bba9c;" class="col-sm-12 col-md-4">
                     <h3>Food List</h3>
                         <%for(var i=0;i<newItems.length;i++){%>
                     <p style="text-decoration: underline;"> <%=newItems[i]%></p>
